# interpolator4

./: CMakeLists.txt  Makefile  README.md
include/inp4/: inp4.h  inp4dd.h  inp4df.h  inp4fd.h  inp4ff.h
include/interp4/: interp4ff.h
src/: interpolator4.h  test.c
test/: test.c
